# gorillatracker

./: .gitignore  Dockerfile  LICENSE  Makefile  README.md  args.py  docker-compose.yaml  environment-ci.yml  environment.yml  gorilla.yaml  init_sweep.py  model.py  pyproject.toml  pyrightconfig.json  train.py  train_yolo.py  yolo_train.py
.devcontainer/: devcontainer.json  gpu2_devcontainer.json  kisz_devcontainer.json
.github/workflows/: pr.yml  wandb.yml
alembic/: env.py
alembic/versions/: 69802cf26a68_added_tff_video_index.py  bc2a126519ab_add_tff_index.py
cfgs/: config.yml  convnext_clip_cxl.yml  convnext_config.yml  convnext_cxl.yml  convnextv2_cxl.yml  convnextv2_mnist.yml  convnextv2base_cxl.yml  convnextv2base_mnist.yml  convnextv2base_video.yml  convnextv2huge_cxl.yml  efficientnet_cxl.yml  efficientnet_cxl_body.yml  efficientnet_mnist.yml  efficientnet_rw_m_cxl.yml  efficientnet_rw_m_cxl_kd.yml  efficientnet_rw_m_cxl_ssl_kd copy.yml  facenet_cxl.yml  inceptionv3_cxl.yml  miewidnet_cxl.yml  resnet152_cxl.yml  resnet18_cxl.yml  resnet18_mnist.yml  resnet50_clip_cxl.yml  resnet50_cxl.yml  resnet50_dinov2_cxl.yml  restnet152_mnist.yml  swinv2_cxl.yml  swinv2_large_cxl.yml  swinv2_mnist.yml  swinv2_ssl.yml  swinv2_ssl_body.yml  swinv2_ssl_face.yml  swinv2_video.yml  visiontransformer_clip_cxl.yml  visiontransformer_cxl.yml  visiontransformer_dinov2_cxl.yml  visiontransformer_mnist.yml  yolo_detection_body_fmc.yaml  yolo_detection_face_45.yaml
cfgs/detection/: body_gs.yaml  face_90.yaml
cfgs/tracker/: botsort.yaml
dlib/data/: data_download.py  data_tokenization.py  dataset.py
dlib/frameworks/: speed_monitor.py
notebooks/: bristol_val_dataset.ipynb  cutout_visualizer.ipynb  data_stats.ipynb  data_visualizer.ipynb  database_stats.ipynb  dataset_stats.ipynb  derived_data_visualizer.ipynb  explore_atrw_dataset.ipynb  explore_chimp_ds.ipynb  image_reader.ipynb  model_visualizer.ipynb  test_embedding_generation.ipynb  validate_embeddings.ipynb
scripts/: clean_wandb.py  kisz-run-in-docker.sh  multi_config_train.py  run-in-docker.sh  start_sweep.sh
scripts/multi_configs/: baseline_sweep.json  kn.json  knowledge_distillation.json
src/: data_loader.py  data_loader_mnist.py  data_loader_utils.py  data_loading.py  helpers.py  metrics.py  mnist_data_loader.py  model.py  triplet_loss.py
src/gorillatracker/: args.py  cli.py  data_loaders.py  data_module_bristol.py  data_module_mnist.py  data_modules.py  dataset_splitter.py  metrics.py  model.py  model_miewid.py  train_utils.py  transform_utils.py  triplet_loss.py  type_helper.py
src/gorillatracker/data/: bristol.py  builder.py  contrastive_sampler.py  cxl.py  nlet.py  ssl.py  utils.py
src/gorillatracker/data_modules/: bristol.py  cxl.py  data_modules.py  mnist.py  transform_utils.py
tests/: act-pr.json  test_data_module.py  test_import.py  test_sampler.py  test_ssl_data_structures.py  test_tripletloss.py
tools/: bbox_labeling.py  data_curation_pipeline.py  reformat_datadir.py  task_visualization.py
(+67 files in other folders)
